[package]
name = "helicase"
version = "0.1.0"
edition = "2024"

[dependencies]
bitfrob = "1.3.2"
bitvec = { version = "1.0.1", optional = true }

[dev-dependencies]
criterion = "0.6.0"
fastrand = "2.3.0"

[features]
# Enables unstable nightly features
unstable_nightly = []
# Enables larger k-mers
bitvec = ["dep:bitvec"]

[[bench]]
name = "kmer"
harness = false
